<resources>
    <string name="app_name">NutraPal</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scanner</string>
    <string name="title_account">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="account_label">Account</string>
    <string name="graph_settings_label">Graph Settings</string>
    <string name="history_label">History</string>
    <string name="about_label">About</string>
    <string name="logout_label">Logout</string>
    <string name="email_label">Email\n</string>


    <string name="calorie_count_label">Calorie Count</string>
    <string name="macro_breakdown_label">Macro Breakdown</string>
    <string name="total_breakdown_label">Total Nutritional Breakdown</string>

    <string name="total_label">grams</string>
    <string name="percent_label">percent</string>

    <string name="carbohydrates_label">carbohydrates</string>
    <string name="protein_label">protein</string>
    <string name="fats_label">fats</string>


    <string name="height_label">Height</string>
    <string name="height_hint">Enter height in cm</string>
    <string name="weight_label">Weight</string>
    <string name="weight_hint">Enter weight in lbs</string>
    <string name="age_label">Age</string>
    <string name="age_hint">Enter age</string>
    <string name="gender_label">Gender</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="calculate_label">Calculate Daily Calories</string>
    <string name="result_label">Result:</string>
    <string name="intake_label">Daily Calorie Intake</string>
    <string name="save_label">Save</string>
    <string name="reset_label">Reset</string>
    <string name="title_activity_main_entry">MainEntryActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
