<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/textView2"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="51dp"
        android:text="@string/intake_label"
        android:textSize="20sp" />


    <Button
        android:id="@+id/result_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circular_shape"
        android:text="2000"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/gender_label"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/gender_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">


        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:buttonTint="@color/colorPrimary"
                android:duplicateParentState="true"
                android:text="@string/male_label" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:buttonTint="@color/colorPrimary"
                android:checked="false"
                android:text="@string/female_label" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/height_label"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/height_label" />

    <EditText
        android:id="@+id/height_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/height_hint"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/weight_label"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/weight_label" />

    <EditText
        android:id="@+id/weight_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/weight_hint"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/age_label"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/age_label" />

    <EditText
        android:id="@+id/age_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/age_hint"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <Button
        android:id="@+id/calculate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        android:text="@string/calculate_label" />

    <Button
        android:id="@+id/save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_label"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent" />
</LinearLayout>